myproject/backend/resources/base/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-deployment
spec:
  replicas: 1
  selector:
    matchLabels: {}
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - name: back-end
          image: ghcr.io/nadzzdan/back-end:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: github-container-registry
