myproject/backend/resources/base/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
spec:
  selector: {}
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: LoadBalancer
